k3s-userapps/affine/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: affine
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: redis
    spec:
      volumes:
          - name: redis-pvc
            persistentVolumeClaim:
              claimName: redis
      containers:
        - image: 'docker.io/library/redis:7.4.0'
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /data
              name: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: affine
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app.kubernetes.io/pod: redis
  type: ClusterIP
